resources/Helm-jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-node
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: podport
      protocol: TCP
      port: 8080
      targetPort: 8080
